--- a/music-admin/public/index.html
+++ b/music-admin/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>音乐网站后台</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
